# 2gisTestCase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: 2GisBuild.yml  2GisBuildAndTest.yml  2gisCMakeBuild.yml  2gitCTest.yml  cmake.yml
src/: CMakeLists.txt  CommandLineArgument.cpp  CommandLineArgument.h  CommandLineArgumentConsts.h  CommandLineExcecutor.cpp  CommandLineExcecutor.h  CommandLineParser.cpp  CommandLineParser.h  FileStream.cpp  FileStream.h  IFileStream.h  main.cpp
test/: ArgumentsTest.cpp  CMakeLists.txt  ChecksummTest.cpp  Fixture.cpp  Fixture.h  MockFileStream.h  WordCountTest.cpp
